<resources>
    <string name="app_name">TimeZoneHelper</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_location">Please enter the country code that you are looking for</string>
    <string name="display_time">Your current time:</string>
    <string name="yourTimeZone">"You are in: "</string>
    <string name="input_hint">Please enter the country code</string>
    <string name="input_hint2">Ex. New York, California...</string>
    <string name="Search">Search</string>
    <string name="enter_location2">Specific State?</string>
    <string name="activity2">Activity2</string>
    <string name="time_zone_text">List of Time Zones:</string>
    <string name="TimeZone">Time Zone</string>
    <string name="InputIncorrect">Please enter valid countryCode!</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="Author">This app is created by Jiahao Zhang and David Deng</string>
    <string name="Thanks">Thank you</string>
</resources>
